--- a/components/versions.html
+++ b/components/versions.html
@@ -225,56 +225,63 @@
                 <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                     <td class="color-orange" md-cell>V 3.7.2 - BUG FIX</td>
                     <td md-cell>
-                        <span class="color-green text-bold">Solved the problem for which the tag icons was not displayed if only mandown alarm was on and another tag offline<br>
+                        <span class="color-green text-bold">Solved the problem for which the tag icons was not displayed if only mandown alarm was on and another tag offline</span><br>
                     </td>
                     <td md-cell>24/04/2020</td>
                 </tr>
                 <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                     <td class="color-orange" md-cell>V 3.7.3 - BUG FIX</td>
                     <td md-cell>
-                        <span class="color-green text-bold">Solved the 'map in middle of the ocean'. Solved the home page with only background (controler does not load). Solved some icon visualization problem in legend. Added the label for offline tags in legend<br>
+                        <span class="color-green text-bold">Solved the 'map in middle of the ocean'. Solved the home page with only background (controler does not load). Solved some icon visualization problem in legend. Added the label for offline tags in legend</span><br>
                     </td>
                     <td md-cell>24/04/2020</td>
                 </tr>
                 <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                     <td class="color-orange" md-cell>V 3.8.0 - MINOR UPDATES</td>
                     <td md-cell>
-                        <span class="color-green text-bold">Implemented the reload of the page if the home controller fails to be executed and Inserted the version of the software in the bottom part of the home menu<br>
+                        <span class="color-green text-bold">Implemented the reload of the page if the home controller fails to be executed and Inserted the version of the software in the bottom part of the home menu</span><br>
                     </td>
                     <td md-cell>31/05/2020</td>
                 </tr>
                 <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                     <td class="color-orange" md-cell>V 3.8.1 - BUG FIX</td>
                     <td md-cell>
-                        <span class="color-green text-bold">Removed the hard-coded session name in webSocketServer<br>
+                        <span class="color-green text-bold">Removed the hard-coded session name in webSocketServer</span><br>
                     </td>
                     <td md-cell>03/05/2020</td>
                 </tr>
                 <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                     <td class="color-orange" md-cell>V 3.8.2 - BUG FIX</td>
                     <td md-cell>
-                        <span class="color-green text-bold">Risolto il problema del logo partner che non si vedeva in indoor<br>Risolto il problema delle ancore offline che non si vedevano indoor<br>
+                        <span class="color-green text-bold">Risolto il problema del logo partner che non si vedeva in indoor<br>Risolto il problema delle ancore offline che non si vedevano indoor</span><br>
                     </td>
                     <td md-cell>10/06/2020</td>
                 </tr>
                 <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                     <td class="color-orange" md-cell>V 3.9.0 - UPDATES</td>
                     <td md-cell>
-                        <span class="color-green text-bold">Implementato l'aggiornamento automatico<br>Messo la chiusura o l'errore del socket sul filelog php<br>
+                        <span class="color-green text-bold">Implementato l'aggiornamento automatico<br>Messo la chiusura o l'errore del socket sul filelog php</span><br>
                     </td>
                     <td md-cell>10/06/2020</td>
                 </tr>
                 <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                     <td class="color-orange" md-cell>V 3.10.0 - UPDATES</td>
                     <td md-cell>
-                        <span class="color-green text-bold">Implementata l'interfaccia grafica per l'aggiornamento dell versione<br>
+                        <span class="color-green text-bold">Implementata l'interfaccia grafica per l'aggiornamento dell versione</span><br>
                     </td>
                     <td md-cell>11/06/2020</td>
                 </tr>
                 <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                     <td class="color-orange" md-cell>V 3.11.0 - Impementazione RFID</td>
                     <td md-cell>
-                        <span class="color-green text-bold">Implementata la possibilita di scegliere un rfid per ogni tag<br>Adesso solo l'amministratore poo vedere le versioni
+                        <span class="color-green text-bold">Implementata la possibilita di scegliere un rfid per ogni tag<br>Adesso solo l'amministratore poo vedere le versioni</span>
+                    </td>
+                    <td md-cell>20/06/2020</td>
+                </tr>
+                <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                    <td class="color-orange" md-cell>V 3.11.1 - Impementazione RFID</td>
+                    <td md-cell>
+                        <span class="color-green text-bold">Aggiunti i file map cosi chrome non da piu warnings</span>
                     </td>
                     <td md-cell>20/06/2020</td>
                 </tr>
