--- a/components/home.html
+++ b/components/home.html
@@ -93,6 +93,9 @@
                                 <md-list-item ng-show="homeCtrl.isAdmin" ng-click="safetyBox('home')" class="font-smal"><p>{{lang.safetyBox | uppercase}}</p><img
                                         src="img/icons/menu/safety-box.ico" class="menu-list-icon menu-icon"
                                         alt=""></md-list-item>
+                                <md-list-item ng-show="homeCtrl.isAdmin" ng-click="rfidTable('home')" class="font-smal"><p>{{lang.rfidTable | uppercase}}</p><img
+                                        src="img/icons/menu/rfid.ico" class="menu-list-icon menu-icon"
+                                        alt=""></md-list-item>
                                 <md-list-item ng-click="viewHistory('home')" class="font-smal"><p>{{lang.history | uppercase}}</p><img
                                         src="img/icons/menu/history-icon.ico" class="menu-list-icon menu-icon"
                                         alt=""></md-list-item>
