--- a/components/versions.html
+++ b/components/versions.html
@@ -267,7 +267,7 @@
                 <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                     <td class="color-orange" md-cell>V 3.10.0 - UPDATES</td>
                     <td md-cell>
-                        <span class="color-green text-bold">Implementata l'interfaccia grafica per l'aggiornamento dell versione</span><br>
+                        <span class="color-green text-bold">Implementata l'interfaccia grafica per l'aggiornamento della versione</span><br>
                     </td>
                     <td md-cell>11/06/2020</td>
                 </tr>
@@ -276,12 +276,19 @@
                     <td md-cell>
                         <span class="color-green text-bold">Implementata la possibilita di scegliere un rfid per ogni tag<br>Adesso solo l'amministratore poo vedere le versioni</span>
                     </td>
-                    <td md-cell>20/06/2020</td>
+                    <td md-cell>19/06/2020</td>
                 </tr>
                 <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                     <td class="color-orange" md-cell>V 3.11.1 - Impementazione RFID</td>
                     <td md-cell>
                         <span class="color-green text-bold">Aggiunti i file map cosi chrome non da piu warnings</span>
+                    </td>
+                    <td md-cell>19/06/2020</td>
+                </tr>
+                <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                    <td class="color-orange" md-cell>V 3.12.0 - RFID CRUD</td>
+                    <td md-cell>
+                        <span class="color-green text-bold">Implementate le operazioni crud per l'rfid<br>Aggiustato il notice sul log del socket<br>Inserito l'audio di alarme stop_screen_share</span>
                     </td>
                     <td md-cell>20/06/2020</td>
                 </tr>
@@ -291,4 +298,8 @@
     </div>
 </md-content>
 <!--end popup content-->
-mplementata l'interfaccia grafica per l'aggiornamento dell versione
+V 3.12.0 RFID CRUD
+
+- Implemented the CRUD operations for the RFID
+- Fixed the notice on the socket log
+- Inserted the sos audio
