--- a/components/versions.html
+++ b/components/versions.html
@@ -292,14 +292,16 @@
                     </td>
                     <td md-cell>20/06/2020</td>
                 </tr>
+                <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                    <td class="color-orange" md-cell>V 3.13.0 - SELECT ON RFID INSERT</td>
+                    <td md-cell>
+                        <span class="color-green text-bold">Implementato l'insert di un nuovo rfid con la select per le typologie. Implementata la tabla rfid_type</span>
+                    </td>
+                    <td md-cell>23/06/2020</td>
+                </tr>
                 </tbody>
             </table>
         </md-table-container>
     </div>
 </md-content>
 <!--end popup content-->
-V 3.12.0 RFID CRUD
-
-- Implemented the CRUD operations for the RFID
-- Fixed the notice on the socket log
-- Inserted the sos audio
