v 3.13.1 HOME FRIZZ BUG
- Fixed the bug for which the home freezed for a certain amount of time

--- a/components/versions.html
+++ b/components/versions.html
@@ -299,6 +299,14 @@
                     </td>
                     <td md-cell>23/06/2020</td>
                 </tr>
+                <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                    <td class="color-orange" md-cell>V 3.13.1 - HOME FRIZ BUG</td>
+                    <td md-cell>
+                        <span class="color-green text-bold">Risolto il bug per cui rimaneva frizzato nella home per un tot di tempo</span>
+                    </td>
+                    <td md-cell>23/06/2020</td>
+                </tr>
+
                 </tbody>
             </table>
         </md-table-container>
