--- a/components/versions.html
+++ b/components/versions.html
@@ -306,10 +306,19 @@
                     </td>
                     <td md-cell>23/06/2020</td>
                 </tr>
-
+                <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                    <td class="color-orange" md-cell>V 3.13.2 - REMOVED CATEGORIES ERROR INFO</td>
+                    <td md-cell>
+                        <span class="color-green text-bold">Rimosso il messaggio di errore quando non riesce a prendere le categorie.</span>
+                    </td>
+                    <td md-cell>27/06/2020</td>
+                </tr>
                 </tbody>
             </table>
         </md-table-container>
     </div>
 </md-content>
 <!--end popup content-->
+V 3.13.2 REMOVED CATEGORIES ERROR INFO
+
+- Removed the categories error message when it is not possible to recover the categories
