--- a/components/versions.html
+++ b/components/versions.html
@@ -313,12 +313,16 @@
                     </td>
                     <td md-cell>27/06/2020</td>
                 </tr>
+                <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                    <td class="color-orange" md-cell>V 3.14.0 - RFID AUTOSELECT</td>
+                    <td md-cell>
+                        <span class="color-green text-bold">Implementato l'erfid come select nella tabella tags<br>Implementato l'auto select del rfid.</span>
+                    </td>
+                    <td md-cell>29/06/2020</td>
+                </tr>
                 </tbody>
             </table>
         </md-table-container>
     </div>
 </md-content>
 <!--end popup content-->
-V 3.13.2 REMOVED CATEGORIES ERROR INFO
-
-- Removed the categories error message when it is not possible to recover the categories
