--- a/components/versions.html
+++ b/components/versions.html
@@ -320,9 +320,20 @@
                     </td>
                     <td md-cell>29/06/2020</td>
                 </tr>
+                <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                    <td class="color-orange" md-cell>V 3.14.2 - RFID SELECT</td>
+                    <td md-cell>
+                        <span class="color-green text-bold">Implementata la selezione degli rfid solo per quelli che non sono gia assegnati<br>Implementato il menu rfid all'interno delle locations.</span>
+                    </td>
+                    <td md-cell>29/06/2020</td>
+                </tr>
                 </tbody>
             </table>
         </md-table-container>
     </div>
 </md-content>
 <!--end popup content-->
+V 3.14.2 RFID SELECT
+
+- Implemented the selection of rfids only for those who are not yet assigned
+- Inserted the rfid menu inside locations
