--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,13 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.14.4 - MUTE ALARMS</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Implementata la propagazione del setting degli allarmi nelle varie pagine</span>
+                        </td>
+                        <td md-cell>31/06/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.14.3 - VERSIONS FILE</td>
                         <td md-cell>
                             <span class="color-green text-bold">Aggiornato il file delle versioni</span>
