--- a/css/custom.css
+++ b/css/custom.css
@@ -401,6 +401,10 @@ MARGINS
     margin-bottom: 30px!important;
 }
 
+.margin-bottom-35-px{
+    margin-bottom: 35px;
+}
+
 .margin-bottom-50-px {
     margin-bottom: 50px;
 }
