--- a/components/versions.html
+++ b/components/versions.html
@@ -39,9 +39,17 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.16.0 - INSERT MULTIPLE ANCHORS</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Implementato l'inserimento di ancore multiple
+                                <br>Fixed the anchors ordering</span>
+                        </td>
+                        <td md-cell>30/07/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.15.0 - INSERT MULTIPLE TAGS</td>
                         <td md-cell>
-                            <span class="color-green text-bold">Removed the zoom of the map on empty batteri tag and anchors<br>
+                            <span class="color-green text-bold">Removed the zoom of the map on empty batteri tag and anchors
                                 <br>Changed the delete history implementation
                                 <br>Changed the rfid insert
                                 <br>Implemented the multiple tags insert</span>
