--- a/components/insert-anchor-row.html
+++ b/components/insert-anchor-row.html
@@ -125,7 +125,7 @@
             </md-input-container>
 
             <md-input-container ng-if="insertAnchor.multiple" md-no-float class="md-block padding-left-10-px margin-bottom-0">
-                <input type='number' ng-model='insertAnchor.number_of_tags' name='numberOfAnchors' placeholder="{{lang.anchors_number}}">
+                <input type='number' ng-model='insertAnchor.number_of_anchors' name='numberOfAnchors' placeholder="{{lang.anchors_number}}">
             </md-input-container>
 
             <md-input-container md-no-float class="md-block padding-left-10-px margin-bottom-0">
