V 3.17.0 SUPER USER MANAGER
- Now the superuser can see and modify all the other super users

--- a/components/insert-anchor-row.html
+++ b/components/insert-anchor-row.html
@@ -1,6 +1,6 @@
 <div ng-controller="languageController">
     <!--popup header-->
-    <md-toolbar id="popup-toolbar" ng-class="insertAnchor.resultClass">
+    <md-toolbar id="popup-toolbar" ng-class="insertAnchor.resultClass" class="padding-lr-20-px">
         <div layout="row" layout-align="end center" class="width-100">
             <md-button class="md-icon-button margin-none" ng-click="hide()">
                 <img src="img/icons/close-icon.png" aria-label="{{lang.closeButton}}" alt="{{lang.closeButton}}"
