--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,13 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.17.0 - SUPER USER MANAGER</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Adesso gli super user possono vedere e modificare altri super user
+                        </td>
+                        <td md-cell>3/08/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.16.0 - INSERT MULTIPLE ANCHORS</td>
                         <td md-cell>
                             <span class="color-green text-bold">Implementato l'inserimento di ancore multiple
