--- a/components/insert-tags-row.html
+++ b/components/insert-tags-row.html
@@ -14,7 +14,7 @@
 
         <div layout="column">
             <div layout="row" layout-align="center center" class="">
-                <h1 class=" font-iceberg font-x-large">{{lang.insertingTag | uppercase}}</h1>
+                <h1 class="color-white font-iceberg font-x-large">{{lang.insertingTag | uppercase}}</h1>
             </div>
         </div>
     </md-toolbar>
