V 3.18.0 REMOVED ZOOM FOR ANCHORS OFFLINE
- Removed the zoom of the map when an anchor is offline

--- a/components/versions.html
+++ b/components/versions.html
@@ -39,9 +39,16 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.18.0 - RIMOSSO ZOOM PER ANCORE OFFLINE</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Rimosso lo zoom della mappa per ancore offline</span>
+                        </td>
+                        <td md-cell>7/08/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.17.0 - SUPER USER MANAGER</td>
                         <td md-cell>
-                            <span class="color-green text-bold">Adesso gli super user possono vedere e modificare altri super user
+                            <span class="color-green text-bold">Adesso gli super user possono vedere e modificare altri super user</span>
                         </td>
                         <td md-cell>3/08/2020</td>
                     </tr>
@@ -56,10 +63,10 @@
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.15.0 - INSERT MULTIPLE TAGS</td>
                         <td md-cell>
-                            <span class="color-green text-bold">Removed the zoom of the map on empty batteri tag and anchors
-                                <br>Changed the delete history implementation
-                                <br>Changed the rfid insert
-                                <br>Implemented the multiple tags insert</span>
+                            <span class="color-green text-bold">Rimosso lo zoom della mappa quando c'e' una batteria scarica dell'ancora o del tag
+                                <br>Cambiata l'implementazione della delete history
+                                <br>Cambiato l'inserimento rfid
+                                <br>Implementato l'inserimento di tag multipli</span>
                         </td>
                         <td md-cell>27/07/2020</td>
                     </tr>
