--- a/css/custom.css
+++ b/css/custom.css
@@ -34,6 +34,10 @@ DIMENSIONS
     height: 300px;
 }
 
+.max-height-135px{
+    max-height: 135px;
+}
+
 .width-auto {
     width: auto!important;
 }
