--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,23 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.20.0 Modificata la gestione degli allarmi</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">La batteria scarica non triggera piu' l'audio di batteria scarica</span><br>
+                            <span class="color-green text-bold">Quando calcolo il audio da riprodurre non considero piu batteria scarica</span><br>
+                            <span class="color-green text-bold">Gli utenti generici possono vederre adesso i tag in allarme</span><br>
+                        </td>
+                        <td md-cell>17/08/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.19.2 FIX ALLAEMI TAG PER UTENTI INTERMEDIARI</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Aggiustata la visualizzazione dei tag in allarme per gli utenti intermedi</span><br>
+                            <span class="color-green text-bold">Aggiustata l'assegnazione dei rfid per i tag</span><br>
+                        </td>
+                        <td md-cell>17/08/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.19.0 - CLOUD ALARMS</td>
                         <td md-cell>
                             <span class="color-green text-bold">Ridefinita la visualizzazione degli allarmi all'interno delle finestre coud</span><br>
