V 3.21.0 OUTDOOR ALARM TAGS FOR GENERIC  USER
- The generic userr can now see the alarm tags in outdoor location
- The intermediate user can now see the alarm tags in the outdoor location without teams on
- Added the gps coordinates to the tags out of any location

--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,15 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.21.0 Modificata la gestione degli allarmi outdoor</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Adesso l'utente generico puo' vedere i tag in allarme outdoor</span><br>
+                            <span class="color-green text-bold">Adesso l'utente intermedio puo' vedere i tag in allarme outdoor con le squadre off</span><br>
+                            <span class="color-green text-bold">Aggiunte le coordinate gps ai tag fuori da tutte le location</span><br>
+                        </td>
+                        <td md-cell>19/08/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.20.0 Modificata la gestione degli allarmi</td>
                         <td md-cell>
                             <span class="color-green text-bold">La batteria scarica non triggera piu' l'audio di batteria scarica</span><br>
