--- a/css/custom.css
+++ b/css/custom.css
@@ -10,6 +10,10 @@ DIMENSIONS
     height: 100%;
 }
 
+.height-25px{
+    height: 25px!important;
+}
+
 .height-40px {
     height: 40px!important;
 }
