V 3.23.0 REALTIME UPDATE LOCAtiON WINDOW
- Implemented the real time update of the locations popup window

--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,20 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.23.0 Finestra sito aggiornamento in tempo reale</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Implementato l'aggiornamento in tempo reale degli allarmi all'interno della finestra popup dei siti</span><br>
+                        </td>
+                        <td md-cell>20/08/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.22.0 Batteria scarica in tag status</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Implementata la visualizzazione dei tag con batteria scarica all'interno della finestra stato tag</span><br>
+                        </td>
+                        <td md-cell>19/08/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.21.0 Modificata la gestione degli allarmi outdoor</td>
                         <td md-cell>
                             <span class="color-green text-bold">Adesso l'utente generico puo' vedere i tag in allarme outdoor</span><br>
