V 3.24.0 HANDELING TAGS FROM OTHER LOCATIONS
- Implemented the managing of tags that are not in a location which is of the logged user
- Hide the alarms from tags that are in a location which is not mine

--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,13 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.24.0 Tolti dagli allarmi i tag di una location che non appartiene all'utente logato </td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Adesso gli allarmi dei tag di una location di un utente diverso da quello logato non si vedono piu</span><br>
+                        </td>
+                        <td md-cell>21/08/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.23.0 Finestra sito aggiornamento in tempo reale</td>
                         <td md-cell>
                             <span class="color-green text-bold">Implementato l'aggiornamento in tempo reale degli allarmi all'interno della finestra popup dei siti</span><br>
