--- a/components/versions.html
+++ b/components/versions.html
@@ -39,6 +39,15 @@
 
                 <tbody md-body>
                     <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
+                        <td class="color-orange" md-cell>V 3.25.0 ALLARMI OUTDOOR PER UTENTE LOGATO</td>
+                        <td md-cell>
+                            <span class="color-green text-bold">Adesso la campana degli allarmi compare solo per i tag che sono all'interno di una location dell'utente logato, oppure sono fuori da tutte le locatio (anche quelle degli altri utenti)</span><br>
+                            <span class="color-green text-bold">Adesso l'icona dei tag offline compare solo per i tag dentro ad una locatio dell'utente logato o per i tag fuori da tutte le location</span><br>
+                            <span class="color-green text-bold">Adesso lo status dei tag si riferisce solo ai tag presenti in una location dell'utente logato oppure ai tag fuori da tutte le locations</span><br>
+                        </td>
+                        <td md-cell>22/08/2020</td>
+                    </tr>
+                    <tr md-auto-select="true" md-on-select="logItem" md-row md-select="floor">
                         <td class="color-orange" md-cell>V 3.24.0 Tolti dagli allarmi i tag di una location che non appartiene all'utente logato </td>
                         <td md-cell>
                             <span class="color-green text-bold">Adesso gli allarmi dei tag di una location di un utente diverso da quello logato non si vedono piu</span><br>
